<resources>
    <string name="app_name">Trivia</string>
    <string name="triviaText">Trivia</string>
    <string name="countText">0 out of 100</string>
    <string name="trueButton">True</string>
    <string name="falseButton">False</string>
    <string name="next_button">Next button</string>

    <string name="previous_button">Previous button</string>
    <string name="question_text">Is this a question? :)</string>
    <string name="correct_answer">Correct!</string>
    <string name="incorrect_answer">Incorrect!</string>
    <string name="scoreText">Current Score</string>
    <string name="highest_score">Highest Score</string>
</resources>
